# zpl-rest-api

./: README.md
cpp-api/: CMakeLists.txt  Makefile
cpp-api/cpp-api/: CMakeLists.txt  Makefile  main.cpp
cpp-api/cpp-api/api/: CMakeLists.txt  api.cpp  api.hpp
cpp-api/cpp-api/cupslib/: CMakeLists.txt  cupslib.cpp  cupslib.hpp
cpp-api/cpp-api/generatelib/: generatelib.cpp  generatelib.hpp
cpp-api/cpp-api/httplib/: cmake_install.cmake
cpp-api/cpp-api/jsonlib/: CMakeLists.txt  jsoncpp.cpp
cpp-api/cpp-api/testing/: CMakeLists.txt  testing.cpp  testing.hpp
cpp-api/cpp-api/utility/: CMakeLists.txt  utility.cpp
cpp-api/definitions/: test1.json  test2.json  testfromAPI_1.json  testfromAPI_2_no_rfid.json
cpp-api/example/: test_label1.zpl
cpp-api/src/: CMakeLists.txt  main.cpp
cpp-api/src/api/: api.cpp
cpp-api/src/generatelib/: CMakeLists.txt  generatelib.cpp
cpp-api/src/httplib/: CMakeLists.txt
cpp-api/src/utility/: utility.hpp
cpp-api/temp/: label1.zpl
cpp-print-sandbox/: Makefile
cpp-print-sandbox/example/: label1.zpl  label2.zpl  label_test1.zpl
cpp-print-sandbox/src/: main.cpp  test.cpp  test.h
go-api/: Makefile  go.mod  go.sum
go-api/src/: .test.go.swp  example_globals.go  generate.go  logging.go  main.go  test.go
py-api/: main.py
